--- a/[POO][Aula - Classes][Vitor e Darline]/index.html
+++ b/[POO][Aula - Classes][Vitor e Darline]/index.html
@@ -8,10 +8,17 @@
     <title>Document</title>
 </head>
 <body>
+
     <div class="container-cards">
-        
         <script src="classes.js"></script>
         <script src="objetos.js"></script>
     </div>
+
+    <button onclick="meusProdutosTop.exibirNoHtml()">meus Favoritos</button>
+    <button onclick="produtosTopDaDarline.exibirNoHtml()">Favoritos da Darline</button>
+    <div id="produtos" class="container-cards">
+
+    </div>
+    
 </body>
 </html>
