--- a/2º BIM/Projetos Individuais/ex02/ex02.html
+++ b/2º BIM/Projetos Individuais/ex02/ex02.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <h3>Login</h3>
+    <form action="">
+        <p>Titular <input type="number" id="inTitular" required
+                oninvalid="this.setCustomValidity('Preenche aqui, animal')" oninput="setCustomValidity('Errou')"></p>
+        <p><input type="submit" value="Login"> <input type="button" value="Cadastre-se"></p>
+    </form>
     <script src="ex02.js"></script>
     <script src="ex02-obj.js"></script>
 </body>
+
 </html>
