Atualização projeto conta bancária

--- a/2º BIM/Projetos Individuais/Banco/telaInicial/telaInicial.html
+++ b/2º BIM/Projetos Individuais/Banco/telaInicial/telaInicial.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p>aaaaaaaaa</p>
+    <header></header>
+    
+    <footer></footer>
+    <script src="class.js"></script>
+    <script src="objects.js"></script>
 </body>
 </html>
