--- a/2º BIM/Projetos Individuais/Banco/telaInicialV2/telaInicial.html
+++ b/2º BIM/Projetos Individuais/Banco/telaInicialV2/telaInicial.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/949f4682ad.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="estilos.css">
     <title>Document</title>
 </head>
+
 <body>
     <header></header>
+    <div class="saldoBancario">Saldo:<span id="outSaldo" class=""></span> <span id="eyes" onclick="mudarOlhos()"><i class="fa-solid fa-eye" id="eye"></i></span></div>
+    <form action="">
+        <p><input type="number" id="inValor" step="0.01" min="0" required placeholder="Valor"></p>
+        <p><input type="submit" value="Adicionar Saldo"></p>
+        <p><input type="button" value="Remover Saldo" id="btRemoverSaldo"></p>
+    </form>
+    <footer></footer>
     <script src="class.js"></script>
     <script src="objects.js"></script>
 </body>
+
 </html>
