--- a/2º BIM/Projetos Individuais/Banco/telaInicialV2/telaInicial.html
+++ b/2º BIM/Projetos Individuais/Banco/telaInicialV2/telaInicial.html
@@ -18,7 +18,7 @@
         <p><input type="button" value="Remover Saldo" id="btRemoverSaldo"></p>
     </form>
     <footer></footer>
-    <script src="class.js"></script>
+    <script src="classTeste.js"></script>
     <script src="objects.js"></script>
 </body>
 
